test/variables/kbrady/ref-to-literal.chpl
ref y = 5;
y += 1;
writeln(y);
